platforms, genres and themes CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,20 +24,20 @@
           <span>Compañías</span>
         </button>
         <button mat-menu-item routerLink="/platforms">
-          <mat-icon>voicemail</mat-icon>
-          <span>Platforms</span>
+          <mat-icon>videogame_asset</mat-icon>
+          <span>Plataformas</span>
         </button>
         <button mat-menu-item routerLink="/people">
           <mat-icon>person</mat-icon>
           <span>Personas</span>
         </button>
         <button mat-menu-item routerLink="/genres">
-          <mat-icon>voicemail</mat-icon>
-          <span>Genres</span>
+          <mat-icon>sports_basketball</mat-icon>
+          <span>Géneros</span>
         </button>
         <button mat-menu-item routerLink="/themes">
-          <mat-icon>voicemail</mat-icon>
-          <span>Themes</span>
+          <mat-icon>castle</mat-icon>
+          <span>Temáticas</span>
         </button>
         <button mat-menu-item routerLink="/awards">
           <mat-icon>voicemail</mat-icon>
