--- a/src/app/pages/platforms/platforms.page.html
+++ b/src/app/pages/platforms/platforms.page.html
@@ -1,11 +1,13 @@
 <div class="common-content">
-    platforms!!!
-    <div *ngIf="platforms.length">
+    <vgdb-common-list-header (dialogNewOpen)="dispatchNewDialog()" (toSearch)="search($event)"></vgdb-common-list-header>
+    <div *ngIf="!!platforms.length">
         <vgdb-items-list [itemsList]="platforms"
                           navigateTo="platforms" imgPath="platforms">
         </vgdb-items-list>
     </div>
-    <div class="info-entry">
-        <button (click)="create()">creta</button>
+    <div *ngIf="!platforms.length">
+        <p>No se han encontrado plataformas</p>
     </div>
 </div>
+
+<ng-template #platformForm><vgdb-platform-form (submitted)="formSubmitted($event)"></vgdb-platform-form></ng-template>
