--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,32 +40,13 @@
           <span>Temáticas</span>
         </button>
         <button mat-menu-item routerLink="/awards">
-          <mat-icon>voicemail</mat-icon>
-          <span>Awards</span>
+          <mat-icon>emoji_events</mat-icon>
+          <span>Premios</span>
         </button>
       </mat-menu>
       <span class="spacer"></span>
-      <!--<button mat-icon-button [matMenuTriggerFor]="menuAdd" aria-label="Example icon-button with a menu">
-        <mat-icon>add</mat-icon>
-      </button>
-      <mat-menu #menuAdd="matMenu">
-        <button mat-menu-item routerLink="/games">
-          <mat-icon>dialpad</mat-icon>
-          <span>Games</span>
-        </button>
-        <button mat-menu-item (click)="dispatchDialog()">
-          <mat-icon>voicemail</mat-icon>
-          <span>Check voice mail</span>
-        </button>
-        <button mat-menu-item>
-          <mat-icon>notifications_off</mat-icon>
-          <span>Disable alerts</span>
-        </button>
-      </mat-menu>-->
     </mat-toolbar>
   </div>
-
-  <!--<img src="http://localhost:3000/images/characters/sonic/sonic.jpeg">-->
   <div class="content">
     <router-outlet></router-outlet>
   </div>
