--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
       </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="/games">
-          <mat-icon>dialpad</mat-icon>
-          <span>Games</span>
+          <mat-icon>sports_esports</mat-icon>
+          <span>Juegos</span>
         </button>
         <button mat-menu-item routerLink="/franchises">
           <mat-icon>group_work</mat-icon>
