--- a/src/app/pages/characters/character-detail/character-detail.page.html
+++ b/src/app/pages/characters/character-detail/character-detail.page.html
@@ -133,7 +133,7 @@
                 </mat-autocomplete>
             </mat-form-field>
             <mat-form-field>
-                <mat-label>Relación</mat-label>
+                <mat-label>Rol</mat-label>
                 <mat-select formControlName="role_in_franchise">
                   <mat-option [value]="CharacterRole.main">Principal</mat-option>
                   <mat-option [value]="CharacterRole.antagonist">Antagonista</mat-option>
