--- a/src/app/pages/games/game-detail/game-detail.page.scss
+++ b/src/app/pages/games/game-detail/game-detail.page.scss
@@ -180,3 +180,16 @@
 
     }
 }
+
+.awards-list {
+    margin-bottom: 20px;
+    .award-item {
+        height: 60px;
+        width: 100%;
+        color: black;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid lightgray;
+    }
+}
